test/files/neg/t10015.scala
class Bar {
  def f (x : { def g }) {}
  f (new Baz { def g })
}
